[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/objects/persometer.gd" type="Script" id=1]
[ext_resource path="res://assets/persometer/use.png" type="Texture" id=2]
[ext_resource path="res://assets/persometer/warmth.png" type="Texture" id=3]
[ext_resource path="res://src/objects/persometer/axis.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
position = Vector2( 413, 360 )
script = ExtResource( 1 )

[node name="AxisX" parent="." instance=ExtResource( 4 )]

[node name="AxisY" parent="." instance=ExtResource( 4 )]
rotation = -1.5708

[node name="WarmtY" type="Sprite" parent="."]
visible = false
position = Vector2( 14, -203 )
texture = ExtResource( 3 )

[node name="MarkerY" type="VScrollBar" parent="."]
visible = false
margin_left = -2.0
margin_top = -182.0
margin_right = 30.0
margin_bottom = -54.0
rect_min_size = Vector2( 32, 128 )
min_value = 1.0
max_value = 5.0
step = 1.0
value = 1.0

[node name="ButtonActivate" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 32 )

[node name="Uses" type="Sprite" parent="."]

[node name="Use1" type="Sprite" parent="Uses"]
position = Vector2( 15, -18 )
texture = ExtResource( 2 )

[node name="Use2" type="Sprite" parent="Uses"]
position = Vector2( 49, 15 )
texture = ExtResource( 2 )

[node name="Use3" type="Sprite" parent="Uses"]
position = Vector2( 15, 49 )
texture = ExtResource( 2 )

[node name="Use4" type="Sprite" parent="Uses"]
position = Vector2( -18, 15 )
texture = ExtResource( 2 )

[connection signal="pressed" from="ButtonActivate" to="." method="_on_ButtonActivate_pressed"]
